[package]
description = "Rust bindings for librclone."
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "librclone"
readme = "README.md"
repository = "https://github.com/trevyn/librclone"
version = "0.1.1"

[workspace]
members = ["librclone-sys"]

[dependencies]
libc = "0.2"
librclone-sys = {path = "librclone-sys", version = "0.1.1"}
