[package]
description = "Rust bindings for librclone."
documentation = "https://docs.rs/librclone"
edition = "2021"
keywords = ["rclone"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "librclone"
readme = "README.md"
repository = "https://github.com/trevyn/librclone"
rust-version = "1.60"
version = "0.4.0"

[workspace]
members = ["librclone-sys"]

[dependencies]
librclone-sys = {path = "librclone-sys", version = "=0.4.0"}
