[package]
description = "Rust bindings for librclone."
edition = "2021"
include = ["*"]
license = "MIT AND Apache-2.0 AND BSD-3-Clause AND BSD-2-Clause AND MPL-2.0 AND ISC AND CC0-1.0"
name = "librclone-sys"
repository = "https://github.com/trevyn/librclone"
rust-version = "1.70"
version = "0.8.0+rclone-v1.66.0"

[build-dependencies]
bindgen = "0.69"
